--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tscircuit/pcb-viewer": "^1.10.17",
     "autoprefixer": "^10.4.20",
+    "dsn-converter": "^0.0.10",
     "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
