--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 10
 
     steps:
       - name: Checkout code
@@ -21,19 +21,23 @@ jobs:
         run: bun install
 
       - name: Install Playwright browsers
-        run: bunx playwright install
+        run: bunx playwright install --with-deps
 
-      - name: Start server on a specific port (e.g., 5173)
-        run: |
-          bun start &   # Run the server in the background
-          sleep 10      # Wait for the server to fully start
+      - name: Build project
+        run: bun run build
 
-      - name: Run Playwright tests
-        run: bun run playwright test
+      - name: Run specific test file
+        run: bunx playwright test playwright-tests/dsn-viewer.spec.ts
+        env:
+          CI: true
+          DEBUG: pw:webserver
 
       - uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
+        if: always()
         with:
-          name: test-results
-          path: test-results/
+          name: playwright-report
+          path: |
+            playwright-report/
+            test-results/
           retention-days: 30
+          
